# vid_stream

./: .gitignore  CMakeLists.txt  compile_commands.json
asio/asio/: any_completion_executor.hpp
client/: .gitignore  CMakeLists.txt
client/capture_api/: CMakeLists.txt
client/capture_api/include/: screen_capturer.hpp  screen_capturer_platform.hpp
client/capture_api/include/linux/: screen_capturer_linux.hpp
client/capture_api/include/windows/: screen_capturer_windows.hpp
client/capture_api/src/: screen_capturer.cpp
client/capture_api/src/linux/: screen_capturer_linux.cpp
client/capture_api/src/windows/: screen_capturer_windows.cpp
client/include/: app.hpp  client.hpp  client_util.hpp  screen_capturer.hpp  screen_capturer_platform.hpp  screen_capturer_windows.hpp
client/src/: app.cpp  client.cpp  client_app.cpp  client_connection.cpp  client_ui.cpp  main.cpp  screen_capturer_windows.cpp
ffmpeg-build/: CMakeLists.txt
logger/: CMakeLists.txt
logger/include/: logger.hpp  logger_impl.hpp  string_stream.hpp
logger/src/: logger.cpp  logger_impl.cpp  string_stream.cpp
packet_manager/: CMakeLists.txt
packet_manager/include/: packet.hpp  packet_manager.hpp  packet_type.hpp
packet_manager/src/: packet.cpp  packet_manager.cpp  packet_type.cpp
server/: CMakeLists.txt
server/include/: server.hpp  server_util.hpp  session.hpp
server/src/: main.cpp  server.cpp  session.cpp  session_connect.cpp  session_receive.cpp  session_send.cpp
ui_frame/: CMakeLists.txt
ui_frame/imgui/: imgui_impl_vulkan.cpp
ui_frame/include/: uif_app_base.hpp  uif_context.hpp  uif_memory.hpp  uif_texture.hpp  uif_util.hpp  uif_window.hpp
ui_frame/src/: uif_app_base.cpp  uif_context.cpp  uif_context_init.cpp  uif_context_render.cpp  uif_memory.cpp  uif_texture.cpp  uif_window.cpp
